--- a/APP-UI/src/app/components/expenses/expenses.component.css
+++ b/APP-UI/src/app/components/expenses/expenses.component.css
@@ -27,7 +27,6 @@
 }
 
 
-
 .label {
   min-width: 150px;
   font-weight: 600;
@@ -93,12 +92,33 @@
   background-color: teal;
 }
 
+.table {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0 8px;
+}
+.table td {
+  font-size: 14px;
+  padding: 16px;
+  color: #4a4a4a;
+}
+::ng-deep .mat-header-cell {
+  font-size: 14px;
+  font-weight: 600;
+  color: #2c3e50;
+  padding: 16px;
+}
+
+
 
 textarea {
   min-height: 100px;
   resize: vertical;
 }
 
+.icon{
+  padding: 0px 20px;
+}
 ::ng-deep .mat-mdc-form-field {
   max-height: 10px;
   margin-bottom: 30px;
@@ -114,6 +134,21 @@ textarea {
   display: flex;
   gap: 10px;
 }
+
+.pending-status {
+  background-color: yellow;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+
+.accepted-status {
+  background-color: green;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+
 
 ::ng-deep .mat-mdc-tab-header {
   padding: 10px 20px 0px 20px;
