--- a/APP-UI/src/app/components/travel/travel.component.html
+++ b/APP-UI/src/app/components/travel/travel.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card-header">
-      <h2 class="card-title">Travel Approvals</h2>
+      <h2 class="card-title">Travel Booking</h2>
     </div>
     <div class="card-content"></div></div>
