--- a/APP-UI/src/app/components/approvals/approvals.component.html
+++ b/APP-UI/src/app/components/approvals/approvals.component.html
@@ -1,5 +1,102 @@
 <div class="card">
-    <div class="card-header">
+  <div class="card-header">
+    <div class="header-container">
       <h2 class="card-title">Travel Approvals</h2>
+      <div class="input-field">
+        <button type="button" class="btn"  *ngIf="isManager" (click)="changeView()">Manager View</button>
+        <button type="button" class="btn"  *ngIf="!isManager" (click)="changeView()">Employee View</button>
+      </div>
     </div>
-    <div class="card-content"></div></div>
+  </div>
+  <mat-tab-group ngSkipHydration>
+    <mat-tab label="Pending Approvals" *ngIf="isManager">
+      <div class="card-content">
+        <app-view-approval-form (approve)="approve($event)" (reject)="reject($event)" (goBack)="goBack()" *ngIf="selectedSignup" [signup]="selectedSignup"></app-view-approval-form>
+        <table mat-table [dataSource]="pendingSignups" matSort class="table" *ngIf="!selectedSignup">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">NAME</th>
+            <td mat-cell *matCellDef="let signup">{{signup.name}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="event">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">EVENT</th>
+            <td mat-cell *matCellDef="let signup">{{signup.eventType}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">DATE</th>
+            <td mat-cell *matCellDef="let signup">{{signup.date | date}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="totalCost">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">TOTAL COST</th>
+            <td mat-cell *matCellDef="let signup">
+              {{signup.registrationCost + signup.travelCost + signup.hotelCost + signup.miscCost | currency}}
+            </td>
+          </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="header-cell"> ACTIONS </th>
+          <td mat-cell *matCellDef="let signup">
+            <mat-icon  matTooltip="View Request" (click)="viewRequest(signup)" class="icon">open_in_new</mat-icon>
+          </td>
+        </ng-container>
+          <tr mat-header-row *matHeaderRowDef="pendingColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: pendingColumns;"></tr>
+        </table>
+      </div>
+    </mat-tab>
+    <mat-tab label="View Past Approvals" *ngIf="isManager">
+      <div class="card-content">
+        <table mat-table [dataSource]="signups" matSort class="table">
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">NAME</th>
+            <td mat-cell *matCellDef="let signup">{{signup.name}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="event">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">EVENT</th>
+            <td mat-cell *matCellDef="let signup">{{signup.eventType}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">DATE</th>
+            <td mat-cell *matCellDef="let signup">{{signup.date | date}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="totalCost">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">TOTAL COST</th>
+            <td mat-cell *matCellDef="let signup">
+              {{signup.registrationCost + signup.travelCost + signup.hotelCost + signup.miscCost | currency}}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status" class="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">STATUS</th>
+            <td mat-cell *matCellDef="let signup">
+                <span [ngClass]="{
+                  'pending-status': signup.status === 'Pending',
+                  'accepted-status': signup.status === 'Approved',
+                  'rejected-status': signup.status === 'Rejected'
+
+                }">
+                  {{ signup.status }}
+                </span>
+              </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="header-cell"> ACTIONS </th>
+          <td mat-cell *matCellDef="let signup">
+            <mat-icon  matTooltip="View Request" class="icon">open_in_new</mat-icon>
+          </td>
+        </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="pastColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: pastColumns;"></tr>
+        </table>
+      </div>
+    </mat-tab>
+
+    
+  </mat-tab-group>
+</div>
