--- a/APP-UI/src/app/components/approvals/view-approval-form/view-approval-form.component.html
+++ b/APP-UI/src/app/components/approvals/view-approval-form/view-approval-form.component.html
@@ -35,7 +35,7 @@
         <div class="section">
             <h3>Event Details</h3>
             <div class="input-field">
-                <label class="label">Event Type:</label>
+                <label class="label">Event Name:</label>
                 <input readonly [(ngModel)]="signup.eventType" name="eventType" type="text" placeholder="eventType">
 
 
