--- a/APP-UI/src/app/components/approvals/approvals.component.html
+++ b/APP-UI/src/app/components/approvals/approvals.component.html
@@ -11,7 +11,7 @@
   <mat-tab-group ngSkipHydration>
     <mat-tab label="Pending Approvals" *ngIf="isManager">
       <div class="card-content">
-        <app-view-approval-form (approve)="approve($event)" (reject)="reject($event)" (goBack)="goBack()" *ngIf="selectedSignup" [signup]="selectedSignup"></app-view-approval-form>
+        <app-view-approval-form [isManager]="true" (approve)="approve($event)" (reject)="reject($event)" (goBack)="goBack()" *ngIf="selectedSignup" [signup]="selectedSignup"></app-view-approval-form>
         <table mat-table [dataSource]="pendingSignups" matSort class="table" *ngIf="!selectedSignup">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">NAME</th>
@@ -41,8 +41,8 @@
             <mat-icon  matTooltip="View Request" (click)="viewRequest(signup)" class="icon">open_in_new</mat-icon>
           </td>
         </ng-container>
-          <tr mat-header-row *matHeaderRowDef="pendingColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: pendingColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="pendingMngColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: pendingMngColumns;"></tr>
         </table>
       </div>
     </mat-tab>
@@ -91,8 +91,100 @@
           </td>
         </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="pastColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: pastColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="pastMngCol"></tr>
+          <tr mat-row *matRowDef="let row; columns: pastMngCol;"></tr>
+        </table>
+      </div>
+    </mat-tab>
+
+    <mat-tab label="Pending Approvals" *ngIf="!isManager">
+      <div class="card-content">
+        <app-view-approval-form [isManager]="false" (approve)="approve($event)" (reject)="reject($event)" (goBack)="goBack()" *ngIf="selectedSignup" [signup]="selectedSignup"></app-view-approval-form>
+        <table mat-table [dataSource]="pendingEmpSignups" matSort class="table" *ngIf="!selectedSignup">
+          
+
+          <ng-container matColumnDef="event">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">EVENT</th>
+            <td mat-cell *matCellDef="let signup">{{signup.eventType}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">DATE</th>
+            <td mat-cell *matCellDef="let signup">{{signup.date | date}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="location">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">LOCATION</th>
+            <td mat-cell *matCellDef="let signup">{{signup.location}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="totalCost">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">TOTAL COST</th>
+            <td mat-cell *matCellDef="let signup">
+              {{signup.registrationCost + signup.travelCost + signup.hotelCost + signup.miscCost | currency}}
+            </td>
+          </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="header-cell"> ACTIONS </th>
+          <td mat-cell *matCellDef="let signup">
+            <mat-icon  matTooltip="View Request" (click)="viewRequest(signup)" class="icon">open_in_new</mat-icon>
+          </td>
+        </ng-container>
+          <tr mat-header-row *matHeaderRowDef="pendingEmpColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: pendingEmpColumns;"></tr>
+        </table>
+      </div>
+    </mat-tab>
+
+    <mat-tab label="View Past Approvals" *ngIf="!isManager">
+      <div class="card-content">
+        <table mat-table [dataSource]="employeeSignups" matSort class="table">
+          
+          <ng-container matColumnDef="event">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">EVENT</th>
+            <td mat-cell *matCellDef="let signup">{{signup.eventType}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">DATE</th>
+            <td mat-cell *matCellDef="let signup">{{signup.date | date}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="location">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">LOCATION</th>
+            <td mat-cell *matCellDef="let signup">{{signup.location}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="totalCost">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">TOTAL COST</th>
+            <td mat-cell *matCellDef="let signup">
+              {{signup.registrationCost + signup.travelCost + signup.hotelCost + signup.miscCost | currency}}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="status" class="status">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="header-cell">STATUS</th>
+            <td mat-cell *matCellDef="let signup">
+                <span [ngClass]="{
+                  'pending-status': signup.status === 'Pending',
+                  'accepted-status': signup.status === 'Approved',
+                  'rejected-status': signup.status === 'Rejected'
+
+                }">
+                  {{ signup.status }}
+                </span>
+              </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="header-cell"> ACTIONS </th>
+          <td mat-cell *matCellDef="let signup">
+            <mat-icon  matTooltip="View Request" class="icon">open_in_new</mat-icon>
+          </td>
+        </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="pastEmpCol"></tr>
+          <tr mat-row *matRowDef="let row; columns: pastEmpCol;"></tr>
         </table>
       </div>
     </mat-tab>
