--- a/APP-UI/src/app/components/approvals/approvals.component.css
+++ b/APP-UI/src/app/components/approvals/approvals.component.css
@@ -40,7 +40,7 @@
 }
 
 .btn {
-    background-color: darkcyan;
+    background-color: #13686f;
     color: white;
     border: none;
     border-radius: 8px;
